Basic OpenAPI for upload endpoints added. Basic test for upload listing implemented
